fixed header layout problem using line-height

--- a/04-Front-End/02-CSS/03-Fixed-Navbar/blog/main.css
+++ b/04-Front-End/02-CSS/03-Fixed-Navbar/blog/main.css
@@ -1,43 +1,41 @@
-/*                THIS IS FIXED              */
+/********************** THIS IS FIXED**********************/
 header {
   position: fixed;
   height: 110px;
   width: 100%;
+  line-height: 120px;
   background-color: black;
   color: white;
   z-index: 2;
 }
 
 .nav-content {
-  background-color: blue;
   width: 840px;
   height: 110px;
   margin: auto;
 }
 
 h1 {
-  display: inline;
-  /*height: 110px;*/
-  /*width: 520px;*/
-  background-color: lime;
+  display: inline-block;
+  height: 110px;
+  width: 500px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+*/}
+
+nav {
+  display: inline-block;
 }
 
-/*nav {
-  display: inline;
-  width: 320px;
-  background-color: red;
-}*/
-
 nav a {
-  display: inline;
-  /*width: 120px;
-  height: 110px;*/
-  vertical-align: center;
-  background-color: purple;
+  display: inline-block;
+  width: 100px;
+  margin-right: 0px;
+  margin-top: 0px;
   color: white;
 }
 
-/* NOW THIS MOVES*/
+/********************* NOW THIS MOVES**********************/
 .content {
   position: relative;
   top: 110px;
@@ -46,7 +44,6 @@ nav a {
   padding-top: 10px;
   width: 840px;
 	font-family: 'Open Sans', sans-serif;
-  background-color: #ddd
 }
 
 footer {
@@ -55,5 +52,3 @@ footer {
   width: 840px;
   margin: auto;
 }
-
-
